--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --build-optimizer=false",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts5": "^5.2.12",
+    "@amcharts/amcharts5-geodata": "^5.0.3",
     "@angular/animations": "~13.2.0",
     "@angular/cdk": "^13.3.9",
     "@angular/common": "~13.2.0",
@@ -21,7 +23,9 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.1.3",
+    "echarts": "^5.3.3",
     "jquery": "^3.6.0",
+    "ngx-echarts": "^8.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
