--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/cli": "^14.0.6",
     "@angular/compiler-cli": "^14.0.6",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
